fix z-index bug and null option bug in CreatableSelect

--- a/src/styles/components/form/fields/_select.scss
+++ b/src/styles/components/form/fields/_select.scss
@@ -113,7 +113,7 @@ img.form-fields-select { // sass-lint:disable-line no-qualifying-elements, force
     }
 
     &--warning {
-      background: var(--warning);
+      background: var(--error);
       color: var(--color-white);
     }
   }
